<resources>
    <string name="app_name">AndroidOverview</string>
    <string-array name="city_list">
        <item>Ahmedabad</item>
        <item>Surat</item>
        <item>Rajkot</item>
        <item>Vadodara</item>
        <item>Anand</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Dahod</item>
        <item>Gir Somnath</item>
        <item>Junagadh</item>
        <item>Navsari</item>
    </string-array>
    <string name="no_image">No image</string>
    <string name="registration_form">Registration Form</string>
    <string name="enter_full_name">Enter Your Full Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">* * * * *</string>
    <string name="enter_contact_no">Enter Contact Number</string>
    <string name="choose_city">Choose City</string>
    <string name="enter_area">Enter Area Name</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_address">Enter Address</string>
    <string name="submit_form">Submit Your Form</string>
    <string name="login">Login</string>
    <string name="account_login">Account Login</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_instagram">Welcome to Instagram</string>
    <string name="feedback">FeedBack</string>
    <string name="linear_example">Linear Layout Example</string>
    <string name="frame_example">Frame Layout Example</string>
    <string name="feedback_details">FeedBack Details</string>
    <string name="i_agree">I Agree</string>
    <string name="relative_example">Relative Layout Example</string>
    <string name="merge_button">Merge Button</string>
    <string name="include_exmaple">Include Example</string>
    <string name="table_example">Table Layout Example</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="image_view">Image Of Heroine</string>
    <string name="movie_title">Beauty and the Beast</string>
    <string name="movie_details">March 2017 PG 129 minutes</string>
    <string name="rent_movie">RENT FROM R29.99</string>
    <string name="buy_movie">BUY FROM R127,99</string>
    <string name="tomato_fab">Tomato</string>
    <string name="similar_fab">Similar</string>
    <string name="rating_number">4.5 Rating</string>
    <string name="family">Family</string>
    <string name="rating">71</string>
    <string name="movie_description">The story and characters you know and love come to spectacular life in the live-action adaption of Disney\'s animated classic Beauty and the Beast</string>
    <string name="other">Other</string>
    <string name="welcome_to_simform">%s Welcome To Simform</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="select_hobbies">Select Hobbies</string>
    <string name="dancing">Dancing</string>
    <string name="painting">Painting</string>
    <string name="singing">Singing</string>
    <string name="reading">Reading</string>
    <string name="submit">Submit</string>
    <string name="show_custom_toast">Show Custom Toast</string>
    <string name="no_image_warning">No Image</string>
    <string name="your_email_is">Your email is</string>
    <string name="chapter_2a">Chapter 3(A)</string>
    <string name="profile">Profile</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="chapter_3_C">Chapter 3(C)</string>
    <string name="recycler_view_exmaple">Recycler View Example</string>
    <string name="list_view">List View Example</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="chats_ui">CHATS</string>
    <string name="status_ui">STATUS</string>
    <string name="calls_ui">CALLS</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="contact_name">Contact Name</string>
    <string name="chat_message">Message</string>
    <string name="time_9_11">9:11 AM</string>
    <string name="tasty">TASTY</string>
    <string name="delicious">DELICIOUS</string>
    <string name="sweet">SWEET</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_example">Fragment Example</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="chapter_2b">Chapter 3(B)</string>
    <string name="constraint_layout">Constraint Layout Example</string>
    <string name="table_layout">Table Layout Example</string>
    <string name="time">Time</string>
    <string name="last_name">Last Name</string>
    <string name="show_time">Show time</string>
    <string name="email">Email</string>
    <string name="instagram_title">Instagram</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="chapter_2d">Chapter 2(D)</string>
    <string name="implicit_intent_example">Implicit Intent Example</string>
    <string name="enter_url">Enter URl</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_message">Enter Message to Share</string>
    <string name="enter_number">Enter Number to Call</string>
    <string name="intent_with_data_passing">Intent with data Passing</string>
    <string name="first_name">First Name</string>
    <string name="rules_text">Rules</string>
    <string name="about_us">About Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fragment_example_with_data">Fragment Example with passing data and replace fragment</string>
    <string name="welcome_to_game">Welcome to Game</string>
    <string name="start_game">Start Game</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="what_is_art">What is ART?</string>
    <string-array name="answer_list">
        <item>Android Reaction Time</item>
        <item>Android Run Time</item>
        <item>Android Run Tool</item>
        <item>Android</item>
    </string-array>
    <string name="android_reaction_time">Android Reaction Time </string>
    <string name="android_run_time">Android Run Time</string>
    <string name="none">None</string>
    <string name="android_run_tool">Android Run Tool </string>
    <string name="what_is_android"> What is Android?</string>
    <string name="android">Android</string>
    <string name="your_score">Your score</string>
    <string name="share_via">Share Via</string>
    <string name="slash"> </string>
    <string name="home_click">Home Clicked</string>
    <string name="search_click">Search Clicked</string>
    <string name="pending_intent">Pending Intent</string>
    <string name="time_seconds">Enter Time in Seconds</string>
    <string name="chapter_description">Chapter Description</string>
    <string name="flexible_ui">Flexible Ui</string>
    <string-array name="description_array">
        <item> Ahmedabad is located near the banks of the Sabarmati River, 25 km (16 mi) from the capital of Gujarat, Gandhinagar, also known as its twin city</item>
        <item>Surat is one of the cleanest city of India and is also known by several other names like "THE SILK CITY", "THE DIAMOND CITY", "THE GREEN CITY", etc. It has the most vibrant present and an equally varied heritage of the past. It is the city where the British first land in India.</item>
        <item>Rajkot is the 6th cleanest city of India, and it is the 7th fastest-growing city in the world as of March 2021 </item>
        <item>Vadodara, also known as Baroda, is the second-largest city in the Indian state of Gujarat.</item>
        <item>It is administered by Anand Municipality. It is part of the region known as Charotar, consisting of Anand and Kheda districts. Anand is known as Milk Capital of India.</item>
        <item>It is administered by Anand Municipality. It is part of the region known as Charotar, consisting of Anand and Kheda districts. Anand is known as Milk Capital of India.</item>
    </string-array>
    <string name="gallery">Gallery</string>
    <string name="add_message">Add Message</string>
    <string name="view_message">View Message</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="wake_up">Wake UP</string>
</resources>
