<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBasicRegistration"
    style="@style/DarkMode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@drawable/background"
    tools:context=".RegistrationFormActivity">

    <TextView
        android:id="@+id/tvRegistrationForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/registration_form"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationForm" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:text="@string/select_gender"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <LinearLayout
        android:id="@+id/llRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender">

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGender">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/male"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/female"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10ssp"
                android:text="@string/other"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/tvHobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_76sdp"
        android:text="@string/select_hobbies"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRadioGroup" />

    <LinearLayout
        android:id="@+id/linearLayoutCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHobbies">

        <CheckBox
            android:id="@+id/cbPainting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/painting"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbSinging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singing"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDancing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dancing"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonGender"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:contentDescription="@string/no_image_warning"
        android:scaleType="fitXY"
        android:src="@drawable/no_image"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCheckbox" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/btnCustomToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButtonGender" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCustomToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:padding="@dimen/_15sdp"
        android:text="@string/show_custom_toast"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>