<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/login_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/billabong"
        android:gravity="center_horizontal"
        android:text="@string/instagram_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_46ssp" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="@dimen/_10sdp"
        android:inputType="text"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_16ssp" />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/enter_password"
        android:padding="@dimen/_10sdp"
        android:importantForAutofill="no"
        android:inputType="textWebPassword"
        android:textColorHint="@color/white"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="end"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textAlignment="center"
        android:layout_margin="@dimen/_20sdp"/>

</LinearLayout>