<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="@dimen/_20sdp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:hint="@string/show_time"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_16ssp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:hint="@string/enter_full_name"
            android:textColorHint="@color/white"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="@dimen/_2sdp"
            android:text="@string/last_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:gravity="center"
            android:text="@string/submit_form" />
    </TableRow>

</TableLayout>