<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_150sdp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="@dimen/_20ssp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:hint="@string/enter_full_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:textColorHint="@color/white"
        android:background="@drawable/login_edit_background"
        android:textSize="@dimen/_15ssp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_250sdp"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:textColorHint="@color/white"
        android:background="@drawable/login_edit_background"
        android:textSize="@dimen/_15ssp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_300sdp"
        android:hint="@string/feedback_details"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:textColorHint="@color/white"
        android:background="@drawable/login_edit_background"
        android:textSize="@dimen/_15ssp"
        android:textStyle="italic" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_350sdp"
        android:text="@string/i_agree"
        android:checked="false"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_400sdp"
        android:text="@string/i_agree"
        android:textColor="@color/white"
        android:background="@drawable/login_button_background"/>


</FrameLayout>