<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".RecyclerAndListExamplesActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/ripple_effect_button"
        android:text="@string/recycler_view_exmaple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/ripple_effect_button"
        android:text="@string/list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRecycler" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWhatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/ripple_effect_button"
        android:text="@string/whatsapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnList" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/ripple_effect_button"
        android:text="@string/fragment_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnWhatsapp" />
</androidx.constraintlayout.widget.ConstraintLayout>