<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:contentDescription="@string/no_image_warning"
        android:src="@drawable/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/imageIcon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/name"
            android:textColor="@color/dark_pink"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:text="@string/contact"
            android:textColor="@color/dark_pink"
            android:textSize="@dimen/_20ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>